# python-hsreplay

./: .gitignore  .travis.yml  README.md  convert.py  hsreplay.dtd  main.py  powerlog.dtd  requirements.txt  setup.cfg  setup.py  test_lossless_loading.py  tox.ini  xml_to_log.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
csharp/: HearthstoneReplays.sln
csharp/HearthstoneReplayTests/: AnalyzerTests.cs  HearthstoneReplayTests.csproj  ReplayDataTests.cs  TestDataReader.cs
csharp/HearthstoneReplayTests/Properties/: AssemblyInfo.cs
csharp/HearthstoneReplayTests/TestData/: BRM_Ragnaros_Power.log.txt  Power_1.log.xml  Power_2.log.txt  Power_2.log.xml
csharp/HearthstoneReplays/: HearthstoneReplays.csproj  ReplaySerializer.cs  Utility.cs  bootstrap.bat
csharp/HearthstoneReplays/Hearthstone/Enums/: CHOICE_TYPE.cs  GAME_TAG.cs  GAME_TYPE.cs  METADATA_TYPE.cs  OPTION_TYPE.cs  POWER_SUBTYPE.cs  TAG_CARDTYPE.cs  TAG_CLASS.cs  (+12 more)
csharp/HearthstoneReplays/Parser/: Helper.cs  Node.cs  ParserState.cs  Regexes.cs  ReplayParser.cs
csharp/HearthstoneReplays/Properties/: AssemblyInfo.cs
csharp/HearthstoneReplays/Replay/: Action.cs  Entity.cs  GameState.cs  GameStateType.cs  Player.cs  Replay.cs
csharp/HearthstoneReplays/ReplayData/: Game.cs  GameData.cs  HearthstoneReplay.cs
hsreplay/: __init__.py  document.py  dumper.py  elements.py  parser.py  stream.py  utils.py
java/: pom.xml
python/: LICENSE  README.md  convert.py  main.py  setup.cfg  test_lossless_loading.py
python/hsreplay/: __init__.py  document.py  dumper.py  elements.py  parser.py  utils.py
python/tests/: test_main.py
scripts/: annotate.py  convert.py
tests/: conftest.py  test_main.py  test_stream.py
(+176 files in other folders)
