[metadata]
name = hsreplay
version = 1.4.0
description = A library for creating and parsing HSReplay files
author = Jerome Leclanche
author_email = jerome@hearthsim.net
url = https://github.com/HearthSim/HSReplay/
download_url = https://github.com/HearthSim/HSReplay/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Topic :: Games/Entertainment

[options]
packages = find:
install_requires =
	hearthstone
	lxml

[bdist_wheel]
universal = 1
